# SendMessage

./: .env.sample  README.md  pyproject.toml
config/: settings.py  urls.py
dispatcher/: admin.py  forms.py  models.py  urls.py  views.py
dispatcher/management/commands/: mailing_start.py
dispatcher/migrations/: 0001_initial.py  0002_message.py  0003_mailing.py  0004_alter_mailing_status.py  0005_alter_mailing_date_time_end_mailing_and_more.py  0006_alter_mailing_options_alter_mailing_table.py  0007_alter_message_options_alter_message_table.py  0008_alter_mailing_date_time_end_mailing.py  0009_attempttomailing.py  0010_attempttomailing_sent_messages_count.py  0011_remove_attempttomailing_sent_messages_count_and_more.py  0012_mailing_owner.py  0013_recipient_owner.py  0014_message_owner.py  0015_attempttomailing_owner.py  0016_alter_mailing_options_alter_recipient_options.py
dispatcher/templates/dispatcher/: attemt_to_mailing_list.html  base.html  home.html  mailing_delete.html  mailing_detail.html  mailing_form.html  mailings_list.html  message_delete.html  message_detail.html  message_form.html  messages_list.html  recipient_delete.html  recipient_detail.html  recipient_form.html  recipients_list.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: createmanager.py  createmanagergroup.py  csu.py
users/migrations/: 0001_initial.py  0002_user_token.py  0003_user_reset_token.py  0004_alter_user_options.py  0005_user_country_user_image_user_phone.py
users/templates/users/: login.html  password_reset.html  user_create.html  (+2 more)
